# unicode-safety-check

./: LICENSE  README.md  action.yml  entrypoint.sh  policy.default.yml  todo.md
.github/workflows/: release.yml  test-rust.yml  test.yml
rust/: Cargo.toml
rust/src/: checks.rs  config.rs  diff.rs  main.rs  models.rs  output.rs  scanner.rs  tokenizer.rs  unicode_data.rs
rust/tests/: integration.rs
rust/tests/golden/: annotation.txt  bidi.py  bidi_pair.py  clean.py  confusable.py  control.txt  deprecated_fmt.txt  ignorable.txt  invisible.py  misplaced_bom.py  mixed_endings.txt  mixed_script.py  nbsp.js  normalization.py  private_use.txt  tag_char.txt  variation_sel.txt
src/: checks.py  config.py  diff.py  main.py  models.py  output.py  scanner.py  tokenizer.py  unicode_data.py
